update peer-startup script